# tundra

./: LICENSE  README.md  SPEC.md  flake.nix  integration_test.py  pyproject.toml
.github/workflows/: ci.yml
docs/: module-authoring.md  policy.md  reproducibility.md
examples/: __init__.py  full_api.py  multi_profile_cloud.py  nethermind_tdx.py  qemu_basic.py  strict_secrets.py  surge_tdx_prover.py  tdxs_module.py
examples/modules/: __init__.py  nethermind.py  raiko.py  taiko_client.py
examples/surge-tdx-prover/: .gitignore  __main__.py  image.py
integration_tests/: conftest.py  test_nethermind_tdx_golden.py
src/tdx/: __init__.py  build_cache.py  errors.py  image.py  models.py  policy.py
src/tdx/backends/: __init__.py  base.py  inprocess.py  lima.py  local_linux.py  nix.py
src/tdx/builders/: __init__.py  base.py  c.py  dotnet.py  go.py  materialize.py  rust.py  script.py
src/tdx/cache/: store.py
src/tdx/compiler/: __init__.py  emit_mkosi.py
src/tdx/deploy/: __init__.py  azure.py  gcp.py  qemu.py
src/tdx/fetch/: __init__.py  git.py  http.py
src/tdx/ir/: __init__.py  model.py  normalize.py  validate.py
src/tdx/lockfile/: __init__.py  io.py  resolve.py
src/tdx/measure/: __init__.py  gcp.py  model.py  rtmr.py
src/tdx/modules/: __init__.py  devtools.py  disk_encryption.py  init.py  key_generation.py  nethermind.py  raiko.py  secret_delivery.py  taiko_client.py  tdx_init.py  tdxs.py
src/tdx/profiles/: __init__.py  azure.py  devtools.py  gcp.py
src/tundravm/: __init__.py  image.py  models.py  observability.py  policy.py
tests/: conftest.py  test_bake_and_deploy.py  test_build_cache.py  test_builders.py  test_cache.py  test_composition.py  test_debloat.py  test_deploy_adapters.py  test_emit_mkosi.py  test_enriched_api.py  test_examples_syntax.py  test_fetch.py  test_image.py  test_integration_smoke.py  test_layout.py  test_lima_backend.py  test_local_linux_backend.py  test_lockfile.py  test_measurements.py  test_models_and_errors.py  test_module_dependency_checks.py  test_modules_composable.py  test_modules_nethermind.py  test_modules_raiko.py  test_modules_resolve.py  test_modules_taiko_client.py  test_modules_tdx_init.py  test_modules_tdxs_init.py  test_nethermind_tdx_golden.py  test_nix_backend.py  test_observability_reports.py  test_policy.py  test_profile_scopes.py  test_profiles_azure.py  test_profiles_devtools.py  test_profiles_gcp.py  test_recipe_primitives.py  test_reproducibility.py  test_secret_runtime_targets.py  test_secrets_delivery.py  (+1 more)
(+69 files in other folders)
