[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "tdxvm-sdk"
version = "0.1.0"
description = "Python SDK for declarative TDX-enabled VM image workflows."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [{ name = "TDX VM SDK Contributors" }]
dependencies = ["cbor2>=5.6.5"]

[project.urls]
Homepage = "https://github.com/flashbots/tdxvm"
Repository = "https://github.com/flashbots/tdxvm"

[dependency-groups]
dev = [
  "mypy>=1.11.2",
  "pytest>=8.3.3",
  "ruff>=0.6.9",
]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra"
pythonpath = ["."]
testpaths = ["tests", "integration_tests"]
markers = [
    "integration: integration tests (deselect with '-m \"not integration\"')",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "examples", "tests", "integration_tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Udev rules are single-line domain content that cannot be reformatted
"src/tdx/platforms/gcp.py" = ["E501"]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.12"
mypy_path = ["src"]
packages = ["tdx"]
strict = true

[tool.hatch.build.targets.wheel]
packages = ["src/tdx"]
